<resources>
    <string name="app_name">ICU Track</string>
    <string name="title_activity_working">Scoring Systems</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>
    <string name="welcome">Intro slider example by Tutorialwing.com</string>
    <string name="slide1_desc">A platform where you will get free study materials from beginning to advance levels...</string>
    <string name="slide1_title">Welcome to Tutorialwing.com</string>
    <string name="slide2_desc">This is an application to help people in predicting ICU readmission. Please go through the tutorial</string>
    <string name="slide2_title">Develop mobile applications</string>
    <string name="slide3_desc">Learn to develop web applications using popular programming languages like javascript, html, css, angular etc.</string>
    <string name="slide3_title">Develop web applications</string>
    <string name="slide4_desc">Get some more interesting things on tutorialwing.... :)</string>
    <string name="slide4_title">Want some more interesting stuffs?</string>

    <string name="get_started">Get Started</string>
    <string name="check_it_out">Check It Out</string>

    <string name="text_Age">Age</string>
    <string name="text_">Age</string>
    <string name="text_Heart">Heart Rate</string>
    <string name="text_Bp">Systolic Bp</string>
    <string name="text_Temperature">Temperature</string>
    <string name="text_Bilirubin">Bilirubin</string>
    <string name="text_Potassium">Potassium</string>
    <string name="text_WBC">White Blood Cell </string>
    <string name="text_Pa">Sodium</string>
    <string name="button_Calculate">Calculate</string>
    <string name="button_Reset">Reset</string>
    <string name="button_Save">Save</string>
    <string name="language_Bangla">Bengali</string>
    <string name="language_English">English</string>
    <string name="settings">Settings</string>
    <string name="compare">Compare</string>
    <string name="history">History</string>
    <string name="tab_readmission">Readmission</string>
    <string name="tab_Apache">Severity</string>
    <string name="tab_SAPS">Mortality</string>
    <string name="msg_Sign_IN">Sign In Complete</string>
    <string name="msg_Sign_Up">Sign Up Complete</string>
    <string name="msg_Email">Verify Your Email</string>
    <string name="msg_Confirm">Ok</string>
    <string name="excp_Mail">This user does not exist</string>
    <string name="excp_Password">Invalid email or password</string>

    <string name="text_BUN">BUN</string>
    <string name="text_BiCO2">BiCO2</string>
    <string name="text_Albumin">Albumin</string>
    <string name="text_Glucose">Glucose</string>
    <string name="text_Platelet">Platelet</string>
    <string name="text_Globuline">Globuline</string>
    <string name="text_PH">PH</string>
    <string name="text_Na">Na</string>
    <string name="text_Creatininr">Creatinine</string>
    <string name="text_Hematocrit">Hematocrit</string>
    <string name="text_Admission">Admission Type</string>
    <string name="text_Gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="text_LOS">Length of Stay</string>
    <string name="text_PaO2">PaO2</string>
    <string name="text_Respiratory">Respiratory Rate</string>
    <string name="text_Glasgow">Glasgow Coma Score</string>
    <string name="text_chronic">Chronic Health Problem</string>

    <string-array name="Admission_Array">
        <item>Select Here</item>
        <item>Emergency</item>
        <item>Elective</item>
        <item>Urgent</item>

    </string-array>
    <string-array name="apache_temp">
        <item></item>

    </string-array>

    <string-array name="Temperature_Array">

        <item>Select Here</item>
        <item>>=105.8</item>
        <item>> 102-105.62 </item>
        <item> 96.8-101.12</item>
        <item>93.2-96.62</item>
        <item>89.6-93.02</item>

        <item>86-89.42</item>
        <item>less than or eq 85.82</item>

    </string-array>


    <string-array name="Bp_Array">

        <item>Select Here</item>
        <item>>=160</item>
        <item>130-159 </item>
        <item> 110-129</item>
        <item>70-109</item>
        <item>55-69</item>

        <item>40-54</item>
        <item>less than or eq 49 </item>
    </string-array>


    <string-array name="Heart_Array">


        <item>Select Here</item>
        <item>>=160</item>
        <item>130-159 </item>
        <item> 110-129</item>
        <item>70-109</item>
        <item>55-69</item>

        <item>40-54</item>
        <item>less than or eq 49 </item>


    </string-array>

    <string-array name="Respiratory_Array">
        <item>Select Here</item>
        <item>>=50</item>
        <item>35-49 </item>
        <item> 25-34</item>
        <item>12-24</item>
        <item>10-11</item>

        <item>6-9</item>
        <item>less than or eq 5 </item>
    </string-array>


    <string-array name="Pa02_Array">
        <item>Select Here</item>
        <item>>=500</item>
        <item>350-499 </item>
        <item> 200-349</item>
        <item>70-200</item>
        <item>61-70</item>

        <item>55-60</item>
        <item>less than or eq 55 </item>

    </string-array>


    <string-array name="PH_Array">
        <item>Select Here</item>
        <item>>=500</item>
        <item>350-499 </item>
        <item> 200-349</item>
        <item>70-200</item>
        <item>61-70</item>

        <item>55-60</item>
        <item>less than or eq 55 </item>

    </string-array>


    <string-array name="Sodium_Array">

        <item>Select Here</item>
        <item>>=180</item>
        <item>160-179 </item>
        <item> 155-159</item>
        <item>150-154</item>
        <item>130-149</item>

        <item>120-129</item>
        <item>less than or eq 120 </item>

    </string-array>

    <string-array name="Potassium_Array">


        <item>Select Here</item>
        <item>>=3.5</item>
        <item>6-6.9 </item>
        <item> 5.5-5.9</item>
        <item>3.5-5.4</item>
        <item>3-3.4</item>

        <item>2.5-2.9</item>
        <item>less than or eq 2.5 </item>


    </string-array>
    <string-array name="Creatinine_Array">
        <item>Select Here</item>
        <item>>=3.5</item>
        <item>2-3.4 </item>
        <item> 1.5-1.9</item>
        <item>150-154</item>
        <item>0.6-1.4</item>


        <item>less than or eq 0.6 </item>
    </string-array>


    <string-array name="Hematocrit_Array">
        <item>Select Here</item>
        <item>>=60</item>
        <item>50-59.9 </item>
        <item> 46-49.9</item>
        <item>30-45.9</item>
        <item>20-29.9</item>
        <item>less than or eq 20 </item>
    </string-array>


    <string-array name="Wbc_Array">
        <item>Select Here</item>
        <item>>=40</item>
        <item>20-39.9 </item>
        <item> 15-19.9</item>
        <item>3-14.9</item>
        <item>1-2.9</item>


        <item>less than or eq 1 </item>
    </string-array>

    <string-array name="Age_Array">
        <item>Select Here</item>
        <item>>=75</item>
        <item>65-74 </item>
        <item> 55-64</item>
        <item>45-54</item>

        <item>less than or eq 44 </item>
    </string-array>


    <string-array name="Critical_Array">
        <item>Select Here</item>
        <item>None</item>
        <item>None-Sergical </item>
        <item>Emergency Operation</item>
        <item>Elective Operation</item>

    </string-array>

    <string name="apache_1">4% non-operation 1% Post Operation</string>
    <string name="apache_2">8% non-operation 3% Post Operation</string>
    <string name="apache_3">15% non-operation 7% Post Operation</string>
    <string name="apache_4">24% non-operation 12% Post Operation</string>
    <string name="apache_5">40% non-operation 30% Post Operation</string>
    <string name="apache_6">55% non-operation 35% Post Operation</string>

    <string name="apache_7">Approx 75% both </string>
    <string name="apache_8">88% non-operation 83% Post Operation</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_saved_data">SavedData</string>
    <string name="start">STarted</string>


    <string-array name="Saps_Age">
        <item>Select Here</item>
        <item> less than 40 </item>
        <item> 40-59 </item>
        <item>60-69 </item>
        <item>70-74</item>
        <item>75-79</item>
        <item>greater than 80 </item>

    </string-array>
    <string-array name="Saps_Heart">
        <item>Select Here</item>
        <item> less than 40</item>
        <item>40-69 </item>
        <item>70-119</item>
        <item>120-159</item>
        <item>greater than 160 </item>

    </string-array>


    <string-array name="Saps_Bp">
        <item>Select Here</item>
        <item> less than 70</item>
        <item>70-69 </item>
        <item>100-199</item>
        <item>75-79</item>
        <item>greater than 200 </item>
    </string-array>


    <string-array name="Saps_Urine">
        <item>Select Here</item>
        <item> less than 500 </item>
        <item>500-999 </item>
        <item>100-199</item>
        <item>greater than 1000 </item>
    </string-array>


    <string-array name="Saps_Sodium">
        <item>Select Here</item>
        <item> less than 125</item>
        <item>125-144 </item>

        <item>greater than 145 </item>
    </string-array>

    <string-array name="Saps_Potassium">
        <item>Select Here</item>
        <item> less than 3.0</item>
        <item>3.0-4.9 </item>

        <item>greater than 5.0 </item>
    </string-array>


    <string-array name="Saps_Temp">
        <item>Select Here</item>
        <item> less than 102.2 </item>

        <item>greater than 102.2 </item>
    </string-array>

    <string-array name="Saps_GCS">
        <item>Select Here</item>
        <item> 14-15</item>
        <item>11-13 </item>
        <item>6-8</item>

        <item>less than 6</item>
    </string-array>

    <string-array name="Saps_PaO2">
        <item>Select Here</item>
        <item> less than 100</item>
        <item>100-199 </item>

        <item>greater than 200 </item>
    </string-array>


    <string-array name="Saps_BUN">
        <item>Select Here</item>
        <item> less than 28</item>
        <item>28-83 </item>
        <item>greater than 84 </item>
    </string-array>

    <string-array name="Saps_BiCarbonate">
        <item>Select Here</item>
        <item> less than 15</item>
        <item>15-19 </item>
        <item>greater than 20 </item>
    </string-array>

    <string-array name="Saps_Bilirubin">
        <item>Select Here</item>
        <item> less than 4.0</item>
        <item>4.0-5.9 </item>
        <item>greater than 6.0 </item>
    </string-array>

    <string-array name="Saps_WBC">
        <item>Select Here</item>
        <item> less than 1</item>
        <item>1.00-19.9 </item>

        <item>greater than 20.0 </item>
    </string-array>


    <string-array name="Saps_Chronic">
        <item>Select Here</item>
        <item> None</item>
        <item>Cancer </item>
        <item>Hematologic malignancy</item>
        <item>Aids</item>

    </string-array>


    <string-array name="Saps_Admissions">
        <item>Select Here</item>
        <item>Surgery</item>
        <item>Medical </item>
        <item>Unscheduled Surgery</item>


    </string-array>
    <string name="text_Urine">Urine Output</string>
    <string name="text_Bicarbonate">Bicarbonate</string>


</resources>
