<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical"
    android:background="@drawable/backg"

    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="30dp"
        >
        <TextView
            android:layout_alignParentTop="true"
            android:id="@+id/tTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="8dp"
            android:text="@string/text_Temperature"
            android:textColor="#fffdfd"
            android:textSize="17dp" />


        <EditText
            android:id="@+id/eTemp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="7dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_Temperature" />




        <TextView
            android:layout_below="@+id/tTemp"
            android:id="@+id/tBillirubin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/text_Bilirubin"
            android:textColor="#fffdfd"
            android:textSize="17dp" />


        <EditText
            android:id="@+id/eBilirubin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="7dp"
            android:layout_below="@id/tTemp"

            android:background="@drawable/buttonshape"
            android:hint="@string/text_Bilirubin" />



        <TextView
            android:id="@+id/tPlatelet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eBilirubin"
            android:layout_marginTop="8dp"
            android:text="@string/text_Platelet"
            android:textColor="#fffdfd"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/ePlatelet"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tPlatelet"
            android:layout_alignBottom="@+id/tPlatelet"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_Platelet" />

        <TextView
            android:id="@+id/tLos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ePlatelet"
            android:layout_marginTop="8dp"
            android:text="@string/text_LOS"
            android:textColor="#fffdfd"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/eLos"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ePlatelet"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_LOS" />

        <TextView
            android:id="@+id/tPaO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eLos"
            android:layout_marginTop="8dp"
            android:text="@string/text_PaO2"
            android:textColor="#fffdfd"
            android:textSize="17dp"

            />

        <EditText
            android:id="@+id/ePaO2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/eLos"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_PaO2" />

        <TextView
            android:id="@+id/tPH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ePaO2"
            android:layout_marginTop="8dp"
            android:text="@string/text_PH"
            android:textColor="#fffdfd"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/ePH"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ePaO2"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_PH" />

        <TextView
            android:id="@+id/tNa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ePH"
            android:layout_marginTop="5dp"
            android:text="@string/text_Pa"
            android:textColor="#fffdfd"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/eNa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ePH"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_Pa"
            android:paddingBottom="2dp" />

        <TextView
            android:id="@+id/tPotassium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/eNa"
            android:layout_marginTop="3dp"
            android:text="@string/text_Potassium"
            android:textColor="#fffdfd"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/ePotassium"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/eNa"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_Potassium" />

        <TextView
            android:id="@+id/tCreatinine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ePotassium"
            android:layout_marginTop="5dp"
            android:text="@string/text_Creatininr"
            android:textColor="#fffdfd"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/eCreatine"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/ePotassium"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_Creatininr" />

        <TextView
            android:id="@+id/tWbc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/eCreatine"
            android:layout_marginTop="5dp"
            android:text="@string/text_WBC"
            android:textColor="#fffdfd"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/eWBC"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/eCreatine"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_WBC" />

        <TextView
            android:id="@+id/tHematocrit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/eWBC"
            android:layout_marginTop="5dp"
            android:text="@string/text_Hematocrit"
            android:textColor="#fffdfd"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/eHematocrit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/eWBC"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_Hematocrit" />

        <TextView
            android:id="@+id/tAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/eHematocrit"
            android:layout_marginTop="5dp"
            android:text="@string/text_Age"
            android:textColor="#fffdfd"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/eAge"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/eHematocrit"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:hint="@string/text_Age" />

        <Button
            android:id="@+id/bCalculate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/rfeMale"
            android:layout_marginTop="20dp"

            android:background="@drawable/custombutton"
            android:elevation="10dp"
            android:text="@string/button_Calculate" />

        <TextView

            android:id="@+id/tGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/eAge"
            android:layout_marginTop="15dp"
            android:text="@string/text_Gender"
            android:textColor="#fffdfd"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/rMale"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"

            android:layout_below="@id/eAge"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/rfeMale"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rMale"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonshape"
            android:text="@string/gender_female" />


        <Button
            android:id="@+id/bReset"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custombutton"
            android:text="@string/button_Reset" />

        <Button

            android:id="@+id/bSave"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/rfeMale"
            android:layout_marginLeft="5dp"

            android:layout_marginTop="20dp"
            android:background="@drawable/custombutton"
            android:text="@string/button_Save" />


    </RelativeLayout>

</ScrollView>