<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.icutrack.SavedData">

    <Button
        android:id="@+id/breadmission"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tab_readmission" />

    <Button
        android:id="@+id/bSeverity"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/breadmission"
        android:layout_marginEnd="23dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tab_SAPS" />

    <Button
        android:id="@+id/bSaps"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tab_Apache" />

</RelativeLayout>
